# loggen

./: .dockerignore  .gitignore  DEVELOPING.md  DOCKER.md  Dockerfile  GETTING_STARTED.md  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  dockerhub-description.yml  pypi-publish.yml
loggen/: __init__.py  cli.py
loggen/generators/: __init__.py  auth.py  base.py  cloud.py  dns.py  email.py  firewall.py  ids_ips.py  system.py  web.py
loggen/mitre/: __init__.py  mapper.py  techniques.json
loggen/models/: __init__.py  log_event.py  scenario.py
loggen/outputs/: __init__.py  base.py  file_output.py  stdout_output.py
loggen/utils/: __init__.py  constants.py  faker_config.py  timestamps.py
