[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loggen"
version = "0.1.0"
description = "Generate realistic SOC analyst training logs with MITRE ATT&CK technique mapping"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Himangshu Pan", email = "contrivance.databank@gmail.com"}
]
keywords = ["soc", "logs", "mitre", "security", "training", "threat-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=1.9.0",
    "faker>=15.0.0",
    "httpx>=0.20.0",
    "python-dotenv>=0.21.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
loggen = "loggen.cli:app"

[tool.setuptools]
packages = ["loggen", "loggen.models", "loggen.generators", "loggen.mitre", "loggen.outputs", "loggen.utils"]

[tool.setuptools.package-data]
"loggen.mitre" = ["*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
