[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loggen-cli"
version = "0.2.0"
description = "Generate realistic SOC analyst training logs with MITRE ATT&CK technique mapping"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    {name = "Himangshu Pan", email = "contrivance.databank@gmail.com"}
]
keywords = ["soc", "logs", "mitre", "security", "training", "threat-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=1.9.0",
    "faker>=15.0.0",
    "httpx>=0.20.0",
    "python-dotenv>=0.21.0",
    "rich>=10.0.0",
]

[project.urls]
Homepage       = "https://github.com/sheru-pan/loggen"
Source         = "https://github.com/sheru-pan/loggen"
Issues         = "https://github.com/sheru-pan/loggen/issues"
"Docker Image" = "https://hub.docker.com/r/sheru/loggen"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
loggen = "loggen.cli:app"

[tool.setuptools]
packages = ["loggen", "loggen.models", "loggen.generators", "loggen.mitre", "loggen.outputs", "loggen.utils"]

[tool.setuptools.package-data]
"loggen.mitre" = ["*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
